# autobrr-remove

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  autobrr_remove.py  compose.yaml  config.example.yaml  flake.nix  pyproject.toml
.github/workflows/: docker.yaml  release-please.yml
autobrr_remove/: __init__.py  config.py  main.py
